# CppTemplate

./: CMakeLists.txt  requirements.txt  runCmake.sh
mainfiles/: main.cpp
